--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm install
 
       - name: Eslint 🪧
-        run: npm run lint
+        run: npm run lint -- --fix
         
       - name: Run Test 🔨
         run: npm run test
